Add Favicon for Case study Part 2

--- a/Exercises/CaseStudyPt2/index.html
+++ b/Exercises/CaseStudyPt2/index.html
@@ -4,6 +4,7 @@
 	<title>JavaJam Coffee House</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="javajam.css">
+	<link rel="icon" href="javajam.ico">
 </head>
 <body>
 <div id="wrapper">
