--- a/Exercises/CaseStudyPt2/menu.html
+++ b/Exercises/CaseStudyPt2/menu.html
@@ -4,6 +4,7 @@
 	<title>JavaJam Coffee House</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="javajam.css">
+	<link rel="icon" href="javajam.ico">
 </head>
 <body>
 <div id="wrapper">
@@ -23,7 +24,7 @@
 	</div>
 	<div class="content" id="rightcolumn">
 		<p id="title">Coffee at JavaJam</p>
-		<table border="1">
+		<table border="1" id="menu">
 			<tr>
 				<th>Just Java</th>
 				<td>Regular house blend, decaffeinated coffee, or flavor of the day.<br>
@@ -43,7 +44,7 @@
 	</div>
 	<footer>
 		Copyright &copy; 2017 JavaJam Coffee House<br>
-		<a href="Yizhou@Liu.com"><i>Yizhou@Liu.com</a>
+		<a href="mailto:Yizhou@Liu.com">Yizhou@Liu.com</a>
 	</footer>
 </div>
 </body>
