Update form CSS for label and input, textarea

--- a/Exercises/CaseStudyPt2/jobs.html
+++ b/Exercises/CaseStudyPt2/jobs.html
@@ -27,14 +27,14 @@
 			<p id="title">Jobs at JavaJam</p>
 			<p>Want to work at JavaJam? Fill out the form below to start your application. Required fields are marked with an asterisk * </p>
 			<form id="jobform" action="show_post.php" method="post">
-				<label for="myName">*Name:</label>
-				<input type="text" name="myName" id="myname" required>
+				<label for="name">*Name:</label>
+				<input type="text" name="name" id="name" placeholder="Your Name" required>
 				<label for="email">*E-mail:</label>
-				<input type="email" name="email" id="email" required>
+				<input type="email" name="email" id="email" placeholder="Your Email" required>
 				<label for="startDate">Start Date:</label>
 				<input type="date" name="startDate" id="startDate">
 				<label for="experience">*Experience:</label>
-				<textarea name="experience" id="experience" rows="5" cols="45" required></textarea>
+				<textarea name="experience" id="experience" rows="5" cols="45" placeholder="Your Experience" required></textarea>
 				<input type="submit" id="submit" value="Apply Now">
 			</form>
 		</div>
